Идемпотентность и import pipeline
